Non-unified build fixes, late August 2020 edition https://bugs.webkit.org/show_bug.cgi?id=215768

Unreviewed build fix.

Source/WebCore:

No new tests needed.


* Modules/webaudio/StereoPannerNode.cpp: Add missing headers AudioNodeInput.h,
AudioNodeOutput.h, and wtf/IsoMallocInlines.h.
* bindings/js/JSHTMLCanvasElementCustom.cpp:
(WebCore::JSHTMLCanvasElement::visitAdditionalChildren):
Add JSC:: namespace to SlotVisitor parameter type.
* dom/SimpleRange.cpp: Add missing ShadowRoot.h header.
* history/CachedPage.cpp: Add missing FrameLoaderClient.h header.

Source/WebKit:


* UIProcess/WebURLSchemeTask.cpp: Add missing SharedBufferDataReference.h header.


Canonical link: https://commits.webkit.org/228538@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266061 268f45cc-cd09-0410-ab3c-d52691b4dbfc