Source/WebCore/history/CachedPage.cpp
@@ -31,6 +31,7 @@
 #include "FocusController.h"
 #include "Frame.h"
 #include "FrameLoader.h"
+#include "FrameLoaderClient.h"
 #include "FrameView.h"
 #include "HistoryController.h"
 #include "HistoryItem.h"
