Source/WebKit/UIProcess/WebURLSchemeTask.cpp
@@ -27,6 +27,7 @@
 #include "WebURLSchemeTask.h"
 
 #include "APIFrameInfo.h"
+#include "SharedBufferDataReference.h"
 #include "URLSchemeTaskParameters.h"
 #include "WebErrors.h"
 #include "WebPageMessages.h"
